--- a/foor loop chalange/index.html
+++ b/foor loop chalange/index.html
@@ -7,13 +7,14 @@
 </head>
 <body>
   <script>
-    var i = 1;
+    var phoneBook = ["Ezaz","Riaz", "Miraz"];
 
-    do {
-      document.write(i + "<br>");
-      i++
+    for (i = 0; i<phoneBook.length; i++){
+      
     }
-    while (i > 10);
+
+   
+
     
   </script>
   
