--- a/for loop/index.html
+++ b/for loop/index.html
@@ -7,13 +7,12 @@
 </head>
 <body>
   <script>
-    var i = 1;
+    var foods = ["pasta", "pizza", "fish"];
 
-    do {
-      document.write(i + "<br>");
-      i++
+    for (i = 0;  i < foods.length; i++) {
+      document.write(foods[i] + "<br>");
     }
-    while (i > 10);
+
     
   </script>
   
